syntax = "proto3";

package company;

import "app/protos/types/company.proto";

message GetCompanyRequest {
    uint64 company_bank_account_id = 1;
}

message GetCompanyResponse {
    types.Company company = 1;
}
